<!--
  ~ Copyright 2015 Cody Goldberg
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">BME 363 Lab</string>
    <string name="action_settings">Settings</string>

    <string name="dialog_select_device">Select a device</string>
    <string name="dialog_search">Scan for new</string>
    <string name="health_male">Male</string>
    <string name="health_female">Female</string>
    <string name="health_gender">Gender</string>
    <string name="health_fitness">Fitness Level</string>
    <string-array name="health_fitness_choices">
        <item>Athlete</item>
        <item>Excellent</item>
        <item>Good</item>
        <item>Above Average</item>
        <item>Average</item>
        <item>Below Average</item>
        <item>Poor</item>
    </string-array>
    <string name="health_height">Height (inches)</string>
    <string name="health_weight">Weight (pounds)</string>
    <string name="health_bmi">Your BMI is</string>
    <string name="health_calculate">Calculate</string>
    <string name="health_cannot_calculate">Missing fields!</string>
    <string name="action_health_guess">Health Guess</string>
    <string name="activity_heart_guess"><![CDATA[BMI & Age Guesser]]></string>
    <string name="health_age">Age (years)</string>
    <string name="health_heart">Your resting heart should be around</string>
    <string name="location_lat">Latitude</string>
    <string name="location_lng">Longitude</string>
    <string name="unknown">Unknown</string>
    <string name="location_elevation">Elevation</string>
    <string name="location_pressure">Pressure</string>
    <string name="action_location">Location</string>
    <string name="activity_location"><![CDATA[Location & Pressure]]></string>
</resources>
